commit faa34b3fcdcdba94a9bf0031f74f5a393cefdc5e
Author: Gustaf Neumann <neumann@wu-wien.ac.at>
Date:   2022-06-13

    fix typo

M	letsencrypt-procs.tcl

commit cbce0f2f73e9b5f07903d16baefb90388d27fcc8
Author: Gustaf Neumann <neumann@wu-wien.ac.at>
Date:   2022-06-13

    Improved log messages

M	letsencrypt-procs.tcl

commit 0170e7971357c08073ec95e4bdae4cc18d6e2044
Author: Gustaf Neumann <neumann@wu-wien.ac.at>
Date:   2022-02-05

    added option to produce certificates with ecdsa
    
    Prior to this change, all certificates were using RSA keys.
    Since a while, keys based on elliptic curves became the preference
    of letsencrypt.

M	letsencrypt-procs.tcl
M	letsencrypt.tcl

commit 06fe1cd66759b3c3b3ec2da8686895ee850c24b5
Author: Gustaf Neumann <neumann@wu-wien.ac.at>
Date:   2021-12-29

    Removed obtaining the intermediate cross signed certificate
    
    Obtaining this certificated does not seem to be required anymore.
    Improved source code documentation.

M	letsencrypt-procs.tcl

commit 1f276a2ad571cbf41bfc3e686e4c195a2d642913
Author: Gustaf Neumann <neumann@wu-wien.ac.at>
Date:   2021-07-20

    fix typo

M	letsencrypt-procs.tcl

commit 774ff5eb06bc4a3b6e05a8a7c5169fcd32ea53af
Author: Gustaf Neumann <neumann@wu-wien.ac.at>
Date:   2021-07-20

    Don't install the script "letsencrypt.tcl" per default

M	Makefile
M	README

commit d56df865b07b4985b2ce10f4f670fef9e4a28d86
Author: Gustaf Neumann <neumann@wu-wien.ac.at>
Date:   2021-07-20

    added support for multi-arg log calls, improve wording
    
    multi-line log calls can improve line-breaking for long messages.

M	letsencrypt-procs.tcl

commit e9b5197171158206ec29b3cf0be2c08c01a678c8
Author: Gustaf Neumann <neumann@wu-wien.ac.at>
Date:   2021-07-19

    Larger overhaul:
    
    - Added ability to obtain certificate in the background
      (useful for automated certificate updates). Previously
      it was just usable via the "letsencrypt.tcl" command.
    